--- a/assets/css/global/main.css
+++ b/assets/css/global/main.css
@@ -157,6 +157,27 @@ input, p {
     object-position: center;
 }
 
+.object-fit-contain{
+    object-fit: contain !important;
+    object-position: center;
+}
+
+.object-position-tr {
+    object-position: top right !important;
+}
+
+.object-position-tl {
+    object-position: top left !important;
+}
+
+.object-position-br {
+    object-position: bottom right !important;
+}
+
+.object-position-bl {
+    object-position: bottom left !important;
+}
+
 .btn-click-color-1, .btn-click-color-1:focus {
     box-shadow: -2px 2px 4px -1px var(--color-1);
 }
