--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -141,3 +141,13 @@ a {
     background-size: cover;
     background-position: center;
 }
+
+.image-back > .image-back-transparency {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	z-index: -1;
+	object-fit: cover;
+}
