finish page contact

--- a/assets/css/global/color.css
+++ b/assets/css/global/color.css
@@ -43,6 +43,15 @@
     --color-7: #a5e2f9;
     --color-8: #000000;
 
+    --color-1-75: #002e5ac9;
+    --color-2-75: #ffad19c9;
+    --color-3-75: #A70000c9;
+    --color-4-75: #E17F00c9;
+    --color-5-75: #edf5ffc9;
+    --color-6-75: #F1F1F1c9;
+    --color-7-75: #a5e2f9c9;
+    --color-8-75: #000000c9;
+
     --color-1-50: #002e5a80;
     --color-2-50: #ffad1980;
     --color-3-50: #A7000080;
