--- a/assets/css/global/main.css
+++ b/assets/css/global/main.css
@@ -289,7 +289,7 @@ body {
 .btn-color-5, .btn-color-6, .btn-color-7, .btn-color-8 {
 	color: var(--black);
 	font-size: 0.9rem;
-	padding: 0.75rem 1.25rem;
+	padding: 0.5rem 1.25rem;
 	border: 0;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -365,6 +365,17 @@ body {
 
 .btn-color-8:hover {
     background-color: var(--color-8-75);
+}
+
+.btn-color-1:active,
+.btn-color-2:active,
+.btn-color-3:active,
+.btn-color-4:active,
+.btn-color-5:active,
+.btn-color-6:active,
+.btn-color-7:active,
+.btn-color-8:active {
+    box-shadow: var(--shadow-inset-input);
 }
 
 .title {
@@ -561,7 +572,7 @@ body {
     border: 0;
     color: var(--dark-2);
     box-shadow: var(--shadow-outset-input);
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     border: 2px solid var(--light-4);
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -573,12 +584,12 @@ body {
 	-moz-transition: all 200ms ease-in;
 	-ms-transition: all 200ms ease-in;
 	-o-transition: all 200ms ease-in;
+    height: 2rem;
 }
 
 .btn-box-shadow:active,
 .btn-box-shadow:focus {
     box-shadow: var(--shadow-inset-input);
-    font-size: 0.8rem;
 }
 
 .align-sub {
