--- a/public/assets/css/page/dashboard.css
+++ b/public/assets/css/page/dashboard.css
@@ -21,12 +21,13 @@
 	font-size: 0.9rem;
 }
 
-.nav-profile-image {
+.profile-image {
 	width: 4rem;
 	height: 4rem;
 	border-radius: 50%;
 	border: 2px solid var(--color-3);
 	padding: 2px;
+	object-fit: cover;
 }
 
 .dashboard-footer {
@@ -147,6 +148,7 @@
 	align-items: center;
 	align-content: flex-start;
 	padding: 1rem;
+	position: relative;
 }
 
 .search-box-parent {
@@ -191,7 +193,7 @@
 
 .dashboard-inside-container {
 	height: calc(100% - 4rem);
-	margin-top: 1rem;
+	margin-top: 1.8rem;
 	padding: 0.25rem 0.75rem;
 }
 
@@ -224,6 +226,10 @@
 	cursor: pointer;
 }
 
+.appointment-card.small {
+	width: calc(25% - 0.4rem);
+}
+
 .appointment-card > img {
 	flex: 0 0 35%;
 	max-width: 35%;
@@ -235,6 +241,11 @@
 	flex: 1;
 	max-width: 65%;
 	padding: 0.5rem;
+}
+
+.appointment-card.small > img {
+	flex: 0 0 45%;
+	max-width: 45%;
 }
 
 .appointment-card > div > .card-title {
@@ -269,7 +280,7 @@
 }
 
 .appointment-card > div > .card-description-2 > * {
-	flex: 1;
+	flex: 0 0 auto;
 	text-align: right;
 }
 
@@ -308,6 +319,7 @@
 	pointer-events: none;
 }
 
+.inside-container-center,
 .inside-container-left,
 .inside-container-right {
 	display: flex;
@@ -327,4 +339,92 @@
 	border-width: 3px 3px;
 	border-color: var(--light-5);
 	text-align: center;
+}
+
+.btn-back {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+	font-size: 1.5rem;
+}
+
+.message-box {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+	max-width: 85%;
+	margin-bottom: 0.75rem;
+}
+
+.message-box > .profile-image {
+	flex: 0 0 auto;
+}
+
+.message-box > .details {
+	flex: 1;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.message-box > .details > span,
+.message-box > .details > time {
+	font-size: 0.7rem;
+	color: var(--dark-3);
+	text-align: left;
+	display: block;
+	flex: 0 0 auto;
+	max-width: 50%;
+	padding: 0.5rem 1.25rem;
+	margin-right: auto;
+}
+
+.message-box > .details > blockquote {
+	padding: 0.5rem 1.25rem;
+	border-radius: 25px 2px 25px 25px;
+	-webkit-border-radius: 25px 2px 25px 25px;
+	-moz-border-radius: 25px 2px 25px 25px;
+	-ms-border-radius: 25px 2px 25px 25px;
+	-o-border-radius: 25px 2px 25px 25px;
+	box-shadow: var(--shadow-inset-big);
+	line-height: 2;
+	font-size: 0.9rem;
+	font-weight: 300;
+	color: var(--black);
+	text-align: justify;
+	background-color: var(--light-5);
+	flex: 0 0 100%;
+	max-width: 98%;
+	margin-right: auto;
+}
+
+.message-box.left {
+	flex-direction: row-reverse;
+}
+
+.message-box.left > .details > blockquote {
+	border-radius: 2px 25px 25px 25px;
+	-webkit-border-radius: 2px 25px 25px 25px;
+	-moz-border-radius: 2px 25px 25px 25px;
+	-ms-border-radius: 2px 25px 25px 25px;
+	-o-border-radius: 2px 25px 25px 25px;
+	margin-right: 0;
+	margin-left: auto;
+}
+
+.message-box.left > .details > time {
+	text-align: right;
+	margin-left: auto;
+	margin-right: 0;
+}
+
+.message-box.left {
+	margin-right: auto;
+}
+
+.message-box.left > .details > span {
+	color: var(--black);
+	font-weight: 600;
+	font-size: 0.9rem;
 }
