--- a/public/assets/css/page/single.css
+++ b/public/assets/css/page/single.css
@@ -283,12 +283,19 @@ main.main {
     margin-left: 1.25rem;
 }
 
+.addresses-list > li > a,
 .addresses-list > li > p {
     color: var(--color-8);
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
     flex: 1;
     margin: 0;
+    cursor: pointer;
+}
+
+.addresses-list > li > a:hover,
+.addresses-list > li > p:hover {
+    color: var(--color-3);
 }
 
 .page-contact-us-map {
