--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -73,6 +73,7 @@ a {
     top: 0;
     z-index: 150;
     margin: auto;
+    background-image: linear-gradient( to bottom, var(--color-8-50) 15%, transparent 100% );
 }
 
 .header {
@@ -199,4 +200,39 @@ a {
     font-size: 1rem;
     color: var(--dark-2);
     background-color: var(--light-2);
+}
+
+.nav-list-parent > .nav-btn-collapse {
+    display: block;
+}
+
+.nav-list-ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0.75rem 1rem 0 0;
+    width: 100%;
+}
+
+.nav-list-ul > li {
+    flex: 0 0 auto;
+    max-width: 5rem;
+    margin: 0 0.75rem;
+}
+
+.nav-list-ul > li > a {
+    color: var(--light-2);
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.nav-list-ul > li > a:hover {
+    color: var(--color-2);
+}
+
+@media ( min-width: 992px ) {
+    .nav-list-parent > .nav-btn-collapse {
+        display: none;
+    }
 }
