--- a/public/assets/css/global/main.css
+++ b/public/assets/css/global/main.css
@@ -289,6 +289,8 @@ body {
     box-shadow: inset -2px 2px 6px -2px var(--color-8);
 }
 
+.btn-outline-1, .btn-outline-2, .btn-outline-3, .btn-outline-4,
+.btn-outline-5, .btn-outline-6, .btn-outline-7, .btn-outline-8,
 .btn-color-1, .btn-color-2, .btn-color-3, .btn-color-4,
 .btn-color-5, .btn-color-6, .btn-color-7, .btn-color-8 {
 	color: var(--black);
@@ -380,6 +382,75 @@ body {
 .btn-color-7:active,
 .btn-color-8:active {
     box-shadow: var(--shadow-inset-input);
+}
+
+.btn-outline-1, .btn-outline-2, .btn-outline-3, .btn-outline-4,
+.btn-outline-5, .btn-outline-6, .btn-outline-7, .btn-outline-8 {
+    border: 1px solid;
+}
+
+.btn-outline-1 {
+    border-color: var(--color-1);
+}
+
+.btn-outline-2 {
+    border-color: var(--color-2);
+}
+
+.btn-outline-3 {
+    border-color: var(--color-3);
+}
+
+.btn-outline-4 {
+    border-color: var(--color-4);
+}
+
+.btn-outline-5 {
+    border-color: var(--color-5);
+}
+
+.btn-outline-6 {
+    border-color: var(--color-6);
+}
+
+.btn-outline-7 {
+    border-color: var(--color-7);
+}
+
+.btn-outline-8 {
+    border-color: var(--color-8);
+}
+
+.btn-outline-1:hover {
+    background-color: var(--color-1);
+}
+
+.btn-outline-2:hover {
+    background-color: var(--color-2);
+}
+
+.btn-outline-3:hover {
+    background-color: var(--color-3);
+}
+
+.btn-outline-4:hover {
+    background-color: var(--color-4);
+}
+
+.btn-outline-5:hover {
+    background-color: var(--color-5);
+}
+
+.btn-outline-6:hover {
+    background-color: var(--color-6);
+}
+
+.btn-outline-7:hover {
+    background-color: var(--color-7);
+}
+
+.btn-outline-8:hover {
+    background-color: var(--color-8);
 }
 
 .title {
