--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -218,7 +218,7 @@ a {
 
 .nav-list-ul > li {
     flex: 0 0 auto;
-    max-width: 6rem;
+    /* max-width: 6rem; */
     margin: 0 0.75rem;
 }
 
@@ -232,8 +232,14 @@ a {
     color: var(--color-2);
 }
 
+.nav-list-ul > li[class *= "btn"] {
+    padding: 0;
+}
+
 .nav-list-ul > li[class *= "btn"] > a {
     color: inherit;
+    padding: 0.5rem 1.25rem;
+    display: block;
 }
 
 @media ( min-width: 992px ) {
