--- a/public/assets/css/page/dashboard.css
+++ b/public/assets/css/page/dashboard.css
@@ -2,8 +2,14 @@
 @import url("../header.css");
 /* @import url("../footer.css"); */
 
+.nav-list-ul > li:not([class*="btn"]) > a {
+	color: var(--dark-1);
+}
+
 .dashboard-body {
-	background-image: linear-gradient( 0deg, var(--color-4) 0, var(--color-4) 20%,var(--color-2-75) 50%, var(--color-4) 80%, var(--color-4) 100% );
+	/* background-image: linear-gradient( 0deg, var(--color-4) 0, var(--color-4) 20%,var(--color-2-75) 50%, var(--color-4) 80%, var(--color-4) 100% ); */
+	/* background-color: var(--dark-4); */
+	background-color: var(--light-1);
 	width: 100%;
 	height: 100vh;
 	position: relative;
@@ -17,7 +23,7 @@
 .nav-profile p {
 	margin-bottom: 0;
 	font-weight: 600;
-	color: var(--light-1);
+	color: var(--dark-1);
 	font-size: 0.9rem;
 }
 
@@ -54,12 +60,12 @@
 	color: var(--light-1);
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 0.5rem;
-	margin-top: 2.25rem;
+	margin-top: 0.25rem;
+	margin-bottom: 1.5rem;
 }
 
 .side-nav-ul {
-	margin: 0.5rem 0 0 0;
+	margin: 0;
 	padding: 0;
 	list-style: none;
 	line-height: 3;
